--- a/_posts/20180521172542.md
+++ b/_posts/20180521172542.md
@@ -1,7 +1,143 @@
 ---
 title: ブンゴウメールからメールを受信できないケースと対応方法について
-excerpt: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Praesent elementum facilisis leo vel fringilla est ullamcorper eget. At imperdiet dui accumsan sit amet nulla facilisi morbi tempus.'
+excerpt: ブンゴウメールに登録してもメールを受信できないケースについて、よくあるパターンと対応方法をご案内します。
 date: 05/21/2018 17:25:42
 ---
 
-ブンゴウメールに登録してもメールを受信できないケースについて、よくあるパターンと対応方法をご案内します。
+<div class="mb-16">
+  ブンゴウメールに登録してもメールを受信できないケースについて、よくあるパターンと対応方法をご案内します。
+</div>
+
+<div class="mb-24">
+  <h3 class="text-xl font-bold border-b mb-4">■ Gmailをご利用の場合</h3>
+
+  <p class="mb-2">
+    Gmailには強力すぎるフィルタ機能があるため、メールが自動で「カテゴリ」内の「フォーラム」や「プロモーション」などのタブに振り分けられ、受信箱には入らない場合があります。
+  </p>
+
+  <p class="mb-2">
+    一度手動で受信箱に振り分け直せば、その後は受信箱で受信できるようになります。以下URLなどを参考にご対応ください。
+  </p>
+
+  <div class="mt-8 mb-8">
+    <div class="iframely-embed"><div class="iframely-responsive" style="height: 140px; padding-bottom: 0;"><a href="https://www.benchmarkemail.com/jp/blog/how-to-move-your-emails-from-gmails-promotions-tab-to-primary/" data-iframely-url="//cdn.iframe.ly/si0dlVe?iframe=card-small"></a></div></div><script async src="//cdn.iframe.ly/embed.js" charset="utf-8"></script>
+  </div>
+
+  <p class="mb-4">
+    もし迷惑メールやその他のタブを探してもどこにも届いていない場合、お手数ですが以下2つの手順もお試しください。
+  </p>
+
+  <ul class="list-disc list-inside space-y-2">
+    <li>
+      配信元アドレス「bungomail@notsobad.jp」を、Gmailの連絡先に追加する
+      <br />
+      <a class="text-blue-600 border-b border-blue-600" href="http://www.appsupport.jp/gmail/contact-create/" target="_blank">
+        新しい連絡先を作成 | Gmail の使い方
+      </a>
+    </li>
+    <li>
+      Gmailのフィルタで「bungomail@notsobad.jp」を指定して受信できるようにする
+      <br />
+      <a class="text-blue-600 border-b border-blue-600" href="https://kokuchpro.zendesk.com/hc/ja/articles/205453835-%E3%83%A1%E3%83%BC%E3%83%AB%E3%81%8C%E5%B1%8A%E3%81%8B%E3%81%AA%E3%81%84%E3%81%AE%E3%81%A7%E3%81%99%E3%81%8C-%E3%81%A9%E3%81%86%E3%81%99%E3%82%8C%E3%81%B0%E3%82%88%E3%81%84%E3%81%A7%E3%81%99%E3%81%8B-" target="_blank">
+        メールが届かないのですが、どうすればよいですか？ – こくちーずプロ サポート
+      </a>
+    </li>
+  </ul>
+</div>
+
+
+<div class="mb-24">
+  <h3 class="text-xl font-bold border-b mb-4">■ 携帯キャリアアドレスをご利用の場合</h3>
+
+  <p class="mb-2">
+    携帯キャリアのアドレスをお使いの場合、何も設定していなくてもキャリアの迷惑メールフィルタで弾かれるケースがあります。
+  </p>
+
+  <p class="mb-2">
+    以下の各キャリア公式のガイドを参考に、配信元アドレス<span class="font-bold">「bungomail@notsobad.jp」</span>を受信許可リストに追加してください。
+  </p>
+
+  <div class="mt-16 mb-8">
+    <h5 class="text-lg font-bold mb-4">【docomoの場合】</h5>
+    <div class="mb-4">
+      以下URLを参考に、ブンゴウメールのアドレス<span class="font-bold">「bungomail@notsobad.jp」</span>を「指定受信」に追加してください。
+    </div>
+    <div class="mt-8 mb-8">
+      <div class="iframely-embed"><div class="iframely-responsive" style="height: 140px; padding-bottom: 0;"><a href="https://www.nttdocomo.co.jp/info/spam_mail/domain/" data-iframely-url="//cdn.iframe.ly/aFqGlK8"></a></div></div><script async src="//cdn.iframe.ly/embed.js" charset="utf-8"></script>
+    </div>
+  </div>
+
+  <div class="mt-16 mb-8">
+    <h5 class="text-lg font-bold mb-4">【softbankの場合】</h5>
+    <div class="mb-4">
+      以下URLを参考に、ブンゴウメールのアドレス<span class="font-bold">「bungomail@notsobad.jp」</span>を「受信許可リスト」に追加してください。
+    </div>
+    <div class="mt-8 mb-8">
+      <div class="iframely-embed"><div class="iframely-responsive" style="height: 140px; padding-bottom: 0;"><a href="https://www.softbank.jp/mobile/support/mail/antispam/email-i/white/" data-iframely-url="//cdn.iframe.ly/mQ9Pbvo"></a></div></div><script async src="//cdn.iframe.ly/embed.js" charset="utf-8"></script>
+    </div>
+    <div class="mb-2">
+      また受信許可リストに追加しても、なりすまし判定されてフィルタされるケースがあります。合わせて以下の「救済リスト」にも「bungomail@notsobad.jp」を追加してください。  
+    </div>
+    <div class="mt-8 mb-8">
+      <div class="iframely-embed"><div class="iframely-responsive" style="height: 140px; padding-bottom: 0;"><a href="https://www.softbank.jp/mobile/support/mail/antispam/email-i/antispoof-rescue/" data-iframely-url="//cdn.iframe.ly/zMSvLkx"></a></div></div><script async src="//cdn.iframe.ly/embed.js" charset="utf-8"></script>
+    </div>
+  </div>
+
+  <div class="mt-16 mb-8">
+    <h5 class="text-lg font-bold mb-4">【auの場合】</h5>
+    <div class="mb-4">
+      以下URLを参考に、ブンゴウメールのアドレス<span class="font-bold">「bungomail@notsobad.jp」</span>を「受信リスト」に追加してください。
+    </div>
+    <div class="mt-8 mb-8">
+      <div class="iframely-embed"><div class="iframely-responsive" style="height: 140px; padding-bottom: 0;"><a href="https://www.au.com/support/service/mobile/trouble/mail/email/filter/detail/domain/" data-iframely-url="//cdn.iframe.ly/n7EkaMS"></a></div></div><script async src="//cdn.iframe.ly/embed.js" charset="utf-8"></script>
+    </div>
+    <div class="mb-2">
+      またauでは「なりすまし」のフィルタが厳しく、上記設定だけではメールが届かない場合もあります。
+    </div>
+    <div class="mb-2">
+      許可リストへの追加だけでは届かない場合、以下のURLを参考に「なりすまし規制」を「低」に設定いただくことで、メールが届く可能性が上がります。
+    </div>
+    <div class="mt-8 mb-8">
+      <div class="iframely-embed"><div class="iframely-responsive" style="height: 140px; padding-bottom: 0;"><a href="https://www.au.com/support/service/mobile/trouble/mail/email/filter/detail/forgery/" data-iframely-url="//cdn.iframe.ly/LofolaD"></a></div></div><script async src="//cdn.iframe.ly/embed.js" charset="utf-8"></script>
+    </div>
+    <div class="mb-2">
+      ※ただし当然本当の迷惑メールが届く可能性も上がってしまいますので、最後の手段として自己責任でご設定お願いいたします。。
+    </div>
+  </div>
+</div>
+
+<div class="mb-24">
+  <h3 class="text-xl font-bold border-b mb-4">■ Outlook/Hotmailをご利用の場合</h3>
+
+  <p class="mb-2">
+    Outlook/Hotmialをお使いの場合も、同様にメールが自動でフィルタされるケースがあります。
+  </p>
+
+  <p class="mb-2">
+    公式のガイドを参考に、以下2つの設定をお試しください。
+  </p>
+
+  <ul class="list-disc list-inside space-y-2">
+    <li>
+      配信元アドレス「bungomail@notsobad.jp」を「アドレス帳」に追加
+    </li>
+    <li>
+      配信元アドレス「bungomail@notsobad.jp」を「セーフリスト」に追加
+    </li>
+  </ul>
+
+  <div class="mt-8 mb-8">
+    <div class="iframely-embed"><div class="iframely-responsive" style="height: 140px; padding-bottom: 0;"><a href="https://answers.microsoft.com/ja-jp/windowslive/forum/email-send/%25e5%258f%258b%25e9%2581%2594%25e3%2582%2584%25e5%25ae%25b6%25e6%2597%258f/dfa98e72-5301-4a62-ac16-3dee4b18bd1c" data-iframely-url="//cdn.iframe.ly/B6Kydj6"></a></div></div><script async src="//cdn.iframe.ly/embed.js" charset="utf-8"></script>
+  </div>
+</div>
+
+<hr class="mb-12" />
+
+<div>
+  <p class="mb-2">
+    上記設定後もメールが届かない場合は、「info@notsobad.jp」までお問い合わせいただければ幸いです。
+  </p>
+  <p class="mb-2">
+    どうぞよろしくお願いいたします。
+  </p>
+</div>
